TSF-2573 Filtrerer vekk KravDokumentType IM u/ref for periodetjeneste som brukes av k9-formidling